--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
   },
   "include": [
     "./src/client/*",
-    "./src/client/types/**/*.d.ts"
+    "./src/client/types/**/*.d.ts",
+    "./src/server/*"
   ]
 }
