--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.16.3",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "sqlite3": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -29,25 +30,25 @@
     "awesome-typescript-loader": "^5.2.1",
     "babel-eslint": "^10.0.0",
     "babel-loader": "^8.0.0",
-    "clean-webpack-plugin": "^1.0.0",
-    "concurrently": "^4.0.0",
-    "copy-webpack-plugin": "^5.0.3",
-    "css-loader": "^2.0.0",
-    "eslint": "^5.0.0",
-    "eslint-config-airbnb": "^17.0.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "concurrently": "^5.2.0",
+    "copy-webpack-plugin": "^6.0.3",
+    "css-loader": "^4.2.0",
+    "eslint": "^7.6.0",
+    "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
-    "file-loader": "^3.0.0",
-    "html-webpack-plugin": "^3.2.0",
+    "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.3.0",
     "less": "^3.9.0",
-    "less-loader": "^5.0.0",
-    "mini-css-extract-plugin": "^0.6.0",
-    "nodemon": "^1.17.3",
-    "source-map-loader": "^0.2.4",
-    "style-loader": "^0.23.0",
+    "less-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "nodemon": "^2.0.4",
+    "source-map-loader": "^1.0.1",
+    "style-loader": "^1.2.1",
     "typescript": "^3.4.5",
-    "url-loader": "^1.0.1",
+    "url-loader": "^4.1.0",
     "webpack": "^4.5.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.3"
