--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.16.3",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2",
     "sqlite3": "^5.0.0"
+    "swiper": "^6.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
