--- a/package.json
+++ b/package.json
@@ -1,57 +1,58 @@
 {
-  "name": "express-react-typescript",
-  "version": "2.1.1",
-  "description": "An Express, React with Typescript and Less boilerplate",
-  "main": "src/server/index.js",
-  "scripts": {
-    "build-server": "tsc --build tsconfig-server.json",
-    "build": "webpack --mode production && npm run build-server",
-    "start": "npm run build && node dist-server/index.js",
-    "client": "webpack-dev-server --mode development --devtool inline-source-map --hot",
-    "server": "nodemon dist-server/index.js",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
-  },
-  "author": "Elias Rahmani",
-  "license": "ISC",
-  "dependencies": {
-    "@types/react": "^16.8.16",
-    "@types/react-dom": "^16.8.4",
-    "babel-polyfill": "^6.26.0",
-    "body-parser": "^1.19.0",
-    "express": "^4.16.3",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "sqlite3": "^5.0.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
-    "awesome-typescript-loader": "^5.2.1",
-    "babel-eslint": "^10.0.0",
-    "babel-loader": "^8.0.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "concurrently": "^5.2.0",
-    "copy-webpack-plugin": "^6.0.3",
-    "css-loader": "^4.2.0",
-    "eslint": "^7.6.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
-    "file-loader": "^6.0.0",
-    "html-webpack-plugin": "^4.3.0",
-    "less": "^3.9.0",
-    "less-loader": "^6.2.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "nodemon": "^2.0.4",
-    "source-map-loader": "^1.0.1",
-    "style-loader": "^1.2.1",
-    "typescript": "^3.4.5",
-    "url-loader": "^4.1.0",
-    "webpack": "^4.5.0",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.3"
-  }
+    "name": "express-react-typescript",
+    "version": "2.1.1",
+    "description": "An Express, React with Typescript and Less boilerplate",
+    "main": "src/server/index.js",
+    "scripts": {
+        "build-server": "tsc --build tsconfig-server.json",
+        "build": "webpack --mode production && npm run build-server",
+        "start": "npm run build && node dist-server/index.js",
+        "client": "webpack-dev-server --mode development --devtool inline-source-map --hot",
+        "server": "nodemon dist-server/index.js",
+        "dev": "concurrently \"npm run server\" \"npm run client\""
+    },
+    "author": "Elias Rahmani",
+    "license": "ISC",
+    "dependencies": {
+        "@types/react": "^16.8.16",
+        "@types/react-dom": "^16.8.4",
+        "babel-polyfill": "^6.26.0",
+        "body-parser": "^1.19.0",
+        "express": "^4.16.3",
+        "react": "^16.5.2",
+        "react-dom": "^16.5.2",
+        "sqlite3": "^5.0.0"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.0.0",
+        "@babel/plugin-proposal-class-properties": "^7.0.0",
+        "@babel/preset-env": "^7.0.0",
+        "@babel/preset-react": "^7.0.0",
+        "awesome-typescript-loader": "^5.2.1",
+        "babel-eslint": "^10.0.0",
+        "babel-loader": "^8.0.0",
+        "clean-webpack-plugin": "^3.0.0",
+        "concurrently": "^5.2.0",
+        "copy-webpack-plugin": "^6.0.3",
+        "css-loader": "^4.2.0",
+        "eslint": "^7.6.0",
+        "eslint-config-airbnb": "^18.2.0",
+        "eslint-plugin-import": "^2.11.0",
+        "eslint-plugin-jsx-a11y": "^6.0.3",
+        "eslint-plugin-react": "^7.7.0",
+        "file-loader": "^6.0.0",
+        "html-webpack-plugin": "^4.3.0",
+        "less": "^3.9.0",
+        "less-loader": "^6.2.0",
+        "mini-css-extract-plugin": "^0.9.0",
+        "nodemon": "^2.0.4",
+        "prettier": "^2.0.5",
+        "source-map-loader": "^1.0.1",
+        "style-loader": "^1.2.1",
+        "typescript": "^3.4.5",
+        "url-loader": "^4.1.0",
+        "webpack": "^4.5.0",
+        "webpack-cli": "^3.0.8",
+        "webpack-dev-server": "^3.1.3"
+    }
 }
