--- a/tsconfig-server.json
+++ b/tsconfig-server.json
@@ -1,15 +1,13 @@
 {
-  "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
-    "target": "es6",
-    "jsx": "react",
-    "module": "commonjs",
-    "sourceMap": true,
-    "outDir": "./dist-server/",
-    "skipLibCheck": true,
-    "esModuleInterop": true
-  },
-  "include": [
-    "./src/server/*"
-  ]
+    "compilerOptions": {
+        "allowSyntheticDefaultImports": true,
+        "target": "es6",
+        "jsx": "react",
+        "module": "commonjs",
+        "sourceMap": true,
+        "outDir": "./dist-server/",
+        "skipLibCheck": true,
+        "esModuleInterop": true
+    },
+    "include": ["./src/server/*"]
 }
