--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "express": "^4.16.3",
         "react": "^16.5.2",
         "react-dom": "^16.5.2",
-        "sqlite3": "^5.0.0"
+        "sqlite3": "^5.0.0",
+        "swiper": "^6.1.1"
     },
     "devDependencies": {
         "@babel/core": "^7.0.0",
