--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,13 @@
 {
-    "parser": "babel-eslint",
-    "extends": ["airbnb"],
+    "root": true,
+    "parser": "@typescript-eslint/parser",
+    "plugins": ["@typescript-eslint"],
+    "extends": [
+        "eslint:recommended",
+        "plugin:@typescript-eslint/eslint-recommended",
+        "plugin:@typescript-eslint/recommended"
+    ],
     "env": {
-        "browser": true,
         "node": true
-    },
-    "rules": {
-        "no-console": "off",
-        "comma-dangle": "off",
-        "react/jsx-filename-extension": "off"
     }
 }
